[project]
name = "queueprocess"
version = "0.1.0"
description = "A simple FastAPI app that processes items from a Redis queue"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
